5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1716_2502.log
== TEST (2019-05-11 20:04:51) 
-- CODE:
#Entrada dos dados:
n = int(input("Digite um numero: "))
pi=0
i=0
while(i < n):
	soma = (-1)**i(1/((2i + 1)*(3*i)))*12**1/2
	pi = pi + soma
	i = i + 1
print(pi)	
	
-- ERROR:
File "XXXX", line 6
    soma = (-1)**i(1/((2i + 1)*(3*i)))*12**1/2
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:07:36) 
-- CODE:
#Entrada dos dados:
n = int(input("Digite um numero: "))
pi=0
i=0
while(i < n):
	soma = (((-1)**i*1)/((2i + 1)*(3*i)))*12**1/2
	pi = pi + soma
	i = i + 1
print(pi)	
	
-- ERROR:
File "XXXX", line 6
    soma = (((-1)**i*1)/((2i + 1)*(3*i)))*12**1/2
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:08:11) 
-- CODE:
#Entrada dos dados:
n = int(input("Digite um numero: "))
pi=0
i=0
while(i < n):
	soma = (((-1)**i*1)/((2*i + 1)*(3*i)))*12**1/2
	pi = pi + soma
	i = i + 1
print(pi)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    soma = (((-1)**i*1)/((2*i + 1)*(3*i)))*12**1/2
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:09:21) 
-- CODE:
#Entrada dos dados:
n = int(input("Digite um numero: "))
pi=0
i=0
while(i < n):
	soma = (((-1)**i*1)/((2*i + 1)*(3*i)))*12**1/2
	pi = pi + soma
	i = i + 1
print(pi)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    soma = (((-1)**i*1)/((2*i + 1)*(3*i)))*12**1/2
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:09:45) 
-- CODE:
#Entrada dos dados:
n = int(input("Digite um numero: "))
pi=0
i=0
while(i < n):
	soma = (((-1)**i*1)/((2*i + 1)*(3**i)))*12**1/2
	pi = pi + soma
	i = i + 1
print(pi)	
	
-- OUTPUT:
5.441399220117539
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:10:05) 
-- CODE:
#Entrada dos dados:
n = int(input("Digite um numero: "))
pi=0
i=0
while(i < n):
	soma = (((-1)**i*1)/((2*i + 1)*(3**i)))*12**1/2
	pi = pi + soma
	i = i + 1
print(pi)	
	
-- OUTPUT:
5.441399220117539
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:10:52) 
-- CODE:
#Entrada dos dados:
n = int(input("Digite um numero: "))
pi=0
i=0
while(i < n):
	soma = (((-1)**i*1)/((2*i + 1)*(3**i)))*12**1/2
	pi = pi + soma
	i = i + 1
	print(soma)
print(pi)

	
-- OUTPUT:
6.0
-0.6666666666666666
0.13333333333333333
-0.031746031746031744
0.008230452674897118
-0.0022446689113355778
0.0006331117442228553
-0.0001828989483310471
5.3793808332660916e-05
-1.604376739746027e-05
4.838596516694367e-06
5.441399220117539
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:16:53) 
-- CODE:
#Entrada dos dados:
n = int(input("Digite um numero: "))
pi=0
i=0
while(i < n):
	r = 12**1/2
	n = ((-1)**i)*1
	d = (2*i + 1)*3**i
	#pi = pi + soma
	#i = i + 1
	print(r)
	print(n)
	print(d)
#print(pi)

	
-- OUTPUT:
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:27:10) 
-- CODE:
#Entrada dos dados:
n = int(input("Digite um numero: "))
pi=0
i=0
while(i < n):
	r = 12**1/2
	n = ((-1)**i)*1
	d = (2*i + 1)*3**i
	#pi = pi + soma
	#i = i + 1
	print(r)
	print(n)
	print(d)
print(pi)

	
-- OUTPUT:
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
6.0
1
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 21:01:01) 
-- CODE:
#Entrada dos dados:
n = int(input("Digite um numero: "))
pi=0
i=0
while(i < n):
	r = 12**0.5
	n = ((-1)**i)*1
	d = (2*i + 1)*3**i
	#pi = pi + soma
	#i = i + 1
	print(r)
	print(n)
	print(d)
print(pi)

	
-- OUTPUT:
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.464101615
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 21:09:20) 
-- CODE:
#Entrada dos dados:
n = int(input("Digite um numero: "))
pi=0
i=0
while(i < n):
	r = 12**0.5
	n = ((-1)**i)*1
	d = (2*i + 1)*3**i
	print(r)
	print(n)
	print(d)
print(pi)

	
-- OUTPUT:
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.4641016151377544
1
1
3.464101615
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 21:12:47) 
-- CODE:
#Entrada dos dados:
n = int(input("Digite um numero: "))
pi=0
i=0
while(i < n):
	r = 12**0.5
	n = ((-1)**i)*1
	d = (2*i + 1)*3**i
	print(r)
	print(n)
	print(d)
	i = i+1
print(pi)

	
-- OUTPUT:
3.4641016151377544
1
1
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 21:14:00) 
-- CODE:
#Entrada dos dados:
n = int(input("Digite um numero: "))
pi=0
i=0
while(i < n):
	r = 12**0.5
	n = ((-1)**i)*1
	d = (2*i + 1)*3**i
	pi = pi + r*(n/d)
	i = i+1
print(pi)

	
-- OUTPUT:
3.4641016151377544
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 21:14:22) 
-- CODE:
#Entrada dos dados:
n = int(input("Digite um numero: "))
pi=0
i=0
while(i < n):
	r = 12**0.5
	n = ((-1)**i)*1
	d = (2*i + 1)*3**i
	pi = pi + r*(n/d)
	i = i+1
print(round(pi, 8))

	
-- OUTPUT:
3.46410162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 21:14:35) 
-- CODE:
#Entrada dos dados:
n = int(input("Digite um numero: "))
pi=0
i=0
while(i < n):
	r = 12**0.5
	n = ((-1)**i)*1
	d = (2*i + 1)*3**i
	pi = pi + r*(n/d)
	i = i+1
print(round(pi, 8))

	
-- OUTPUT:
3.46410162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 21:14:47) 
-- CODE:
#Entrada dos dados:
n = int(input("Digite um numero: "))
pi=0
i=0
while(i < n):
	r = 12**0.5
	n = ((-1)**i)*1
	d = (2*i + 1)*3**i
	pi = pi + r*(n/d)
	i = i+1
print(round(pi, 8))

	
-- OUTPUT:
3.46410162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 21:17:36) 
-- CODE:
#Entrada dos dados:
n = int(input("Digite um numero: "))
pi=0
i=0
while(i < n):
	r = 12**0.5
	n = ((-1)**i)*1
	d = (2*i + 1)*3**i
	pi = pi + r*(n/d)
	i = i + 1
	print(r)
	print(n)
	print(d)
print(round(pi, 8))

	
-- OUTPUT:
3.4641016151377544
1
1
3.46410162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 21:18:18) 
-- CODE:
#Entrada dos dados:
n = int(input("Digite um numero: "))
pi=0
i=0
while(i < n):
	r = 12**0.5
	n = ((-1)**i)*1
	d = (2*i + 1)*3**i
	pi = pi + r*(n/d)
	i = i + 1
	print(r)
	print(n)
	print(d)
print(round(pi, 8))

	
-- OUTPUT:
3.4641016151377544
1
1
3.46410162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 21:19:27) 
-- CODE:
#Entrada dos dados:
n = int(input("Digite um numero: "))
pi=0
i=0
while(i < n):
	r = 12**0.5
	n = ((-1)**i)*1
	d = (2*i + 1)*3**i
	pi = pi + (r*(n/d))
	i = i + 1
	print(r)
	print(n)
	print(d)
print(round(pi, 8))

	
-- OUTPUT:
3.4641016151377544
1
1
3.46410162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 21:20:57) 
-- CODE:
#Entrada dos dados:
n = int(input("Digite um numero: "))
pi=0
i=0
while(i < n):
	r = 12**0.5
	n = ((-1)**i)*1
	d = (2*i + 1)*3**i
	pi = pi + (r*(n/d))
	i = i + 1
	print(r)
	print(n)
	print(d)
print(round(pi, 8))

	
-- OUTPUT:
3.4641016151377544
1
1
3.46410162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 21:25:20) 
-- CODE:
#Entrada dos dados:
n = int(input("Digite um numero: "))
pi = 0
i = 0
while(i < n):
	n = (12**0.5)*(((-1)**i)*1)
	d = (2*i + 1)*3**i
	pi = pi + (n/d)
	i = i + 1
	print(n)
	print(d)
print(round(pi, 8))

	
-- OUTPUT:
3.4641016151377544
1
-3.4641016151377544
9
3.07920144
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 21:28:19) 
-- CODE:
#Entrada dos dados:
n = int(input("Digite um numero: "))
pi = 0
i = 0
while(i < n):
	n = (12**0.5)*(((-1)**i)*1)
	d = (2*i + 1)*3**i
	pi = pi + (n/d)
	i = i + 1
	print(n)
	print(d)
	print(n/d)
print(round(pi, 8))

	
-- OUTPUT:
3.4641016151377544
1
3.4641016151377544
-3.4641016151377544
9
-0.38490017945975047
3.07920144
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 21:28:56) 
-- CODE:
#Entrada dos dados:
n = int(input("Digite um numero: "))
pi = 0
i = 0
while(i < n):
	n = (12**0.5)*(((-1)**i)*1)
	d = (2*i + 1)*3**i
	pi = pi + (n/d)
	i = i + 1
	print(n)
	print(d)
	print(n/d)
#print(round(pi, 8))

	
-- OUTPUT:
3.4641016151377544
1
3.4641016151377544
-3.4641016151377544
9
-0.38490017945975047
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 21:29:20) 
-- CODE:
#Entrada dos dados:
n = int(input("Digite um numero: "))
pi = 0
i = 0
while(i < n):
	n = (12**0.5)*(((-1)**i)*1)
	d = (2*i + 1)*3**i
	pi = pi + (n/d)
	i = i + 1
	print(n)
	print(d)
	print(n/d)
#print(round(pi, 8))

	
-- OUTPUT:
3.4641016151377544
1
3.4641016151377544
-3.4641016151377544
9
-0.38490017945975047
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 21:29:54) 
-- CODE:
#Entrada dos dados:
n = int(input("Digite um numero: "))
pi = 0
i = 0
while(i < n):
	n = (12**0.5)*(((-1)**i)*1)
	d = (2*i + 1)*3**i
	pi = pi + (n/d)
	i = i + 1
	print(n/d)
#print(round(pi, 8))

	
-- OUTPUT:
3.4641016151377544
-0.38490017945975047
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 21:30:25) 
-- CODE:
#Entrada dos dados:
n = int(input("Digite um numero: "))
pi = 0
i = 0
while(i < n):
	n = (12**0.5)*(((-1)**i)*1)
	d = (2*i + 1)*3**i
	pi = pi + (n/d)
	i = i + 1
	print(n/d)
-- OUTPUT:
3.4641016151377544
-0.38490017945975047
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 21:31:19) 
-- CODE:
#Entrada dos dados:
n = int(input("Digite um numero: "))
pi = 0
i = 0
while(i < n):
	n = (12**0.5)*(((-1)**i)*1)
	d = (2*i + 1)*3**i
	i = i + 1
	print(n/d)
-- OUTPUT:
3.4641016151377544
-0.38490017945975047
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 21:31:36) 
-- CODE:
#Entrada dos dados:
n = int(input("Digite um numero: "))
pi = 0
i = 0
while(i < n):
	n = (12**0.5)*(((-1)**i)*1)
	d = (2*i + 1)*3**i
	i = i + 1
	print(n)
-- OUTPUT:
3.4641016151377544
-3.4641016151377544
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 21:31:42) 
-- CODE:
#Entrada dos dados:
n = int(input("Digite um numero: "))
pi = 0
i = 0
while(i < n):
	n = (12**0.5)*(((-1)**i)*1)
	d = (2*i + 1)*3**i
	i = i + 1
	print(n)
-- OUTPUT:
3.4641016151377544
-3.4641016151377544
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 21:32:19) 
-- CODE:
#Entrada dos dados:
n = int(input("Digite um numero: "))
pi = 3.46
i = 0
while(i < n):
	n = (12**0.5)*(((-1)**i)*1)
	d = (2*i + 1)*3**i
	i = i + 1
	print(n)
-- OUTPUT:
3.4641016151377544
-3.4641016151377544
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 21:33:03) 
-- CODE:
#Entrada dos dados:
n = int(input("Digite um numero: "))
pi = 0
i = 0
while(i < n):
	n = (12**0.5)*(((-1)**i)*1)
	d = (2*i + 1)*3**i
	i = i + 1
	print(d)
-- OUTPUT:
1
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 21:34:13) 
-- CODE:
from math impor *
#Entrada dos dados:
n = int(input("Digite um numero: "))
pi = 0
i = 0
while(i < n):
	n = abs((12**0.5))*(((-1)**i)*1)
	d = (2*i + 1)*3**i
	i = i + 1
	print(n/d)
-- ERROR:
File "XXXX", line 1
    from math impor *
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 21:34:21) 
-- CODE:
from math import *
#Entrada dos dados:
n = int(input("Digite um numero: "))
pi = 0
i = 0
while(i < n):
	n = abs((12**0.5))*(((-1)**i)*1)
	d = (2*i + 1)*3**i
	i = i + 1
	print(n/d)
-- OUTPUT:
3.4641016151377544
-0.38490017945975047
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 21:34:43) 
-- CODE:
from math import *
#Entrada dos dados:
n = int(input("Digite um numero: "))
pi = 0
i = 0
while(i < n):
	n = abs((12**0.5))*(((-1)**i)*1)
	d = (2*i + 1)*3**i
	i = i + 1
	print(n)
-- OUTPUT:
3.4641016151377544
-3.4641016151377544
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 21:36:06) 
-- CODE:
from math import *
#Entrada dos dados:
n = int(input("Digite um numero: "))
pi = 0
i = 0
while(i < n):
	r = abs(12**0.5)
	n = ((-1)**i)*1
	d = (2*i + 1)*3**i
	i = i + 1
	print(r)
	print(n)
	print(d)
-- OUTPUT:
3.4641016151377544
1
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 21:36:55) 
-- CODE:
from math import *
#Entrada dos dados:
n = int(input("Digite um numero: "))
pi = 0
i = 0
while(i < n):
	r = abs(12**0.5)
	n = ((-1)**i)*1
	d = (2*i + 1)*3**i
	i = i + 1
	nd = n/d
	print(r)
	print(nd)
	
-- OUTPUT:
3.4641016151377544
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 21:37:33) 
-- CODE:
from math import *
#Entrada dos dados:
n = int(input("Digite um numero: "))
pi = 0
i = 0
while(i < n):
	r = abs(12**0.5)
	n = ((-1)**i)*1
	d = (2*i + 1)*3**i
	i = i + 1
	nd = (n/d)*r
	print(nd)
	
-- OUTPUT:
3.4641016151377544
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 21:38:17) 
-- CODE:
from math import *
#Entrada dos dados:
n = int(input("Digite um numero: "))
pi = 0
i = 0
while(i < n):
	r = abs(12**0.5)
	n = ((-1)**i)*1
	d = (2*i + 1)*3**i
	i = i + 1
	nd = (n/d)*r
	pi = pi + nd
print(pi)
	
-- OUTPUT:
3.4641016151377544
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 21:38:36) 
-- CODE:
from math import *
#Entrada dos dados:
n = int(input("Digite um numero: "))
pi = 0
i = 0
while(i < n):
	r = abs(12**0.5)
	n = ((-1)**i)*1
	d = (2*i + 1)*3**i
	i = i + 1
	nd = (n/d)*r
	pi = pi + nd
print(round(pi, 8))
	
-- OUTPUT:
3.46410162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 21:38:47) 
-- CODE:
from math import *
#Entrada dos dados:
n = int(input("Digite um numero: "))
pi = 0
i = 0
while(i < n):
	r = abs(12**0.5)
	n = ((-1)**i)*1
	d = (2*i + 1)*3**i
	i = i + 1
	nd = (n/d)*r
	pi = pi + nd
print(round(pi, 8))
	
-- OUTPUT:
3.46410162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 21:39:49) 
-- CODE:
from math import *
#Entrada dos dados:
n = int(input("Digite um numero: "))
pi = 0
i = 0
while(i < n):
	r = abs(12**0.5)
	n = ((-1)**i)*1
	d = (2*i + 1)*3**i
	i = i + 1
	nd = (n/d)*r
	pi = pi + nd
	print(r)
	print(n)
	print(d)
	print(nd)
print(round(pi, 8))
	
-- OUTPUT:
3.4641016151377544
1
1
3.4641016151377544
3.46410162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 21:39:58) 
-- CODE:
from math import *
#Entrada dos dados:
n = int(input("Digite um numero: "))
pi = 0
i = 0
while(i < n):
	r = abs(12**0.5)
	n = ((-1)**i)*1
	d = (2*i + 1)*3**i
	i = i + 1
	nd = (n/d)*r
	pi = pi + nd
	print(r)
	print(n)
	print(d)
	print(nd)
print(round(pi, 8))
	
-- OUTPUT:
3.4641016151377544
1
1
3.4641016151377544
3.46410162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 22:01:32) 
-- CODE:
from math import *
#Entrada dos dados:
n = int(input("Digite um numero: "))
pi = 0
i = 0
while(i < n):
	r = abs(12**0.5)
	n = ((-1)**i)*1
	d = (2*i + 1)*3**i
	i = i + 1
	nd = (n/d)
	pi = pi + nd
	print(n)
	print(d)
	print(nd)
print(round(pi, 8))
	
-- OUTPUT:
1
1
1.0
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 22:01:53) 
-- CODE:
from math import *
#Entrada dos dados:
n = int(input("Digite um numero: "))
pi = 0
i = 0
while(i < n):
	r = abs(12**0.5)
	n = ((-1)**i)*1
	d = (2*i + 1)*3**i
	i = i + 1
	nd = (n/d)
	pi = pi + nd
	print(n)
	print(d)
	print(nd)
print(round(pi, 8))
	
-- OUTPUT:
1
1
1.0
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 22:03:25) 
-- CODE:
from math import *
#Entrada dos dados:
n = int(input("Digite um numero: "))
pi = 0
i = 0
while(i < n):
	r = abs(12**0.5)
	n = ((-1)**i)
	d = (2*i + 1)*3**i
	i = i + 1
	nd = (n/d)
	pi = pi + nd
	print(n)
	print(d)
	print(nd)
print(round(pi, 8))
	
-- OUTPUT:
1
1
1.0
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 22:03:38) 
-- CODE:
from math import *
#Entrada dos dados:
n = int(input("Digite um numero: "))
pi = 0
i = 0
while(i < n):
	r = abs(12**0.5)
	n = ((-1)**i)
	d = (2*i + 1)*3**i
	i = i + 1
	nd = (n/d)
	pi = pi + nd
	print(n)
	print(d)
	print(nd)
print(round(pi, 8))
	
-- OUTPUT:
1
1
1.0
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 22:04:33) 
-- CODE:
from math import *
#Entrada dos dados:
n = int(input("Digite um numero: "))
pi = 0
i = 0
while(i < n):
	r = abs(12**0.5)
	n = ((-1)**i)
	d = (2*i + 1)*3**i
	i = i + 1
	print(n)
	print(d)
	print(n/d)
print(round(pi, 8))
	
-- OUTPUT:
1
1
1.0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 22:05:22) 
-- CODE:
from math import *
#Entrada dos dados:
n = int(input("Digite um numero: "))
pi = 0
i = 0
while(i < n):
	r = abs(12**0.5)
	n = (-1)**i
	d = (2*i + 1)*3**i
	i = i + 1
	print(n)
	print(d)
	print(n/d)
print(round(pi, 8))
	
-- OUTPUT:
1
1
1.0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 22:05:38) 
-- CODE:
from math import *
#Entrada dos dados:
n = int(input("Digite um numero: "))
pi = 0
i = 0
while(i < n):
	r = abs(12**0.5)
	n = (-1)**i
	d = (2*i + 1)*3**i
	i = i + 1
	print(n)
	print(d)
	print(n/d)

	
-- OUTPUT:
1
1
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 22:06:14) 
-- CODE:
from math import *
#Entrada dos dados:
n = int(input("Digite um numero: "))
i = 0
while(i < n):
	n = (-1)**i
	d = (2*i + 1)*3**i
	i = i + 1
	print(n)
	print(d)
	print(n/d)

	
-- OUTPUT:
1
1
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 22:06:30) 
-- CODE:
from math import *
#Entrada dos dados:
n = int(input("Digite um numero: "))
i = 0
while(i < n):
	n = (-1)**i
	d = (2*i + 1)*3**i
	i = i + 1
	print(n)
	print(d)
	print(n/d)

	
-- OUTPUT:
1
1
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 22:07:07) 
-- CODE:
from math import *
#Entrada dos dados:
n = int(input("Digite um numero: "))
i = 0
n = (-1)**i
d = (2*i + 1)*3**i
i = i + 1
print(n)
print(d)
print(n/d)

	
-- OUTPUT:
1
1
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 22:07:27) 
-- CODE:
from math import *
#Entrada dos dados:
n = int(input("Digite um numero: "))
i = 1
n = (-1)**i
d = (2*i + 1)*3**i
i = i + 1
print(n)
print(d)
print(n/d)

	
-- OUTPUT:
-1
9
-0.1111111111111111
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 22:10:08) 
-- CODE:
from math import *
#Entrada dos dados:
n = int(input("Digite um numero: "))
i = 0
while (i < n):
	n = (-1)**i
	d = (2*i + 1)*3**i
	i = i + 1
	print(n)
	print(d)
	print(n/d)

	
-- OUTPUT:
1
1
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 22:11:14) 
-- CODE:
n = int(input("Digite um numero natural maior do que zero: "))
i = 0
pi = 0
while (i < n):
	pi = pi + (4/(2*i+1))*(-1)**i
	i=i+1
print(round(pi, 8))	

	
-- OUTPUT:
3.23231581
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 22:13:05) 
-- CODE:
n = int(input("Digite um numero natural maior do que zero: "))
i = 0
pi = 0
while (i < n):
	n = (-1)**i
	d = (2*i + 1)*3**i
	pi = pi + (4/(2*i+1))*(-1)**i
	i=i+1
	print(n)
	print(d)
	print(n/d)
print(round(pi, 8))	
	
-- OUTPUT:
1
1
1.0
4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 22:13:27) 
-- CODE:
n = int(input("Digite um numero natural maior do que zero: "))
i = 0
pi = 0
while (i < n):
	n = (-1)**i
	d = (2*i + 1)*3**i
	pi = pi + (4/(2*i+1))*(-1)**i
	i=i+1
	print(n)
	print(d)
	print(n/d)
print(round(pi, 8))	
	
-- OUTPUT:
1
1
1.0
4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 22:13:51) 
-- CODE:
n = int(input("Digite um numero natural maior do que zero: "))
i = 0
pi = 0
while (i < n):
	pi = pi + (4/(2*i+1))*(-1)**i
	i=i+1
	print(round(pi, 8))	
	
-- OUTPUT:
4.0
2.66666667
3.46666667
2.8952381
3.33968254
2.97604618
3.28373848
3.01707182
3.25236593
3.04183962
3.23231581
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 22:14:27) 
-- CODE:
n = int(input("Digite um numero natural maior do que zero: "))
i = 0
pi = 0
while (i < n):
	pi = pi + (4/(2*i+1))*(-1)**i
	i=i+1
print(round(pi, 8))	
	
-- OUTPUT:
3.23231581
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 22:14:39) 
-- CODE:
n = int(input("Digite um numero natural maior do que zero: "))
i = 0
pi = 0
while (i < n):
	pi = pi + (4/(2*i+1))*(-1)**i
	i=i+1
print(round(pi, 8))	
	
-- OUTPUT:
3.23231581
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 08:38:59) 
-- CODE:
from math import *
#Entrada dos dados:
n = int(input("Digite um numero: "))
i = 0
while (i < n):
	d = (2*i + 1)*3**i
	i = i + 1
	print(d)
	
-- OUTPUT:
1
9
45
189
729
2673
9477
32805
111537
373977
1240029
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 08:39:25) 
-- CODE:
from math import *
#Entrada dos dados:
n = int(input("Digite um numero: "))
i = 0
while (i < n):
	d = (2*i + 1)*3**i
	i = i + 1
	print(d)
	
-- OUTPUT:
1
9
45
189
729
2673
9477
32805
111537
373977
1240029
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 08:57:27) 
-- CODE:
from math import *
#Entrada dos dados:
n = int(input("Digite um numero: "))
i = 0
while (i < n):
	d = (2*i + 1)
	i = i + 1
	print(d)
-- OUTPUT:
1
3
5
7
9
11
13
15
17
19
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 08:57:44) 
-- CODE:
from math import *
#Entrada dos dados:
n = int(input("Digite um numero: "))
i = 0
while (i < n):
	d = (2*i + 1)
	i = i + 1
	print(d)
-- OUTPUT:
1
3
5
7
9
11
13
15
17
19
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 08:58:53) 
-- CODE:
from math import *
#Entrada dos dados:
n = int(input("Digite um numero: "))
i = 0
while (i < n):
	d = (2*i + 1)*3**i
	i = i + 1
	print(d)
-- OUTPUT:
1
9
45
189
729
2673
9477
32805
111537
373977
1240029
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 08:59:07) 
-- CODE:
from math import *
#Entrada dos dados:
n = int(input("Digite um numero: "))
i = 0
while (i < n):
	d = (2*i + 1)*3**i
	i = i + 1
	print(d)
-- OUTPUT:
1
9
45
189
729
2673
9477
32805
111537
373977
1240029
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 08:59:18) 
-- CODE:
from math import *
#Entrada dos dados:
n = int(input("Digite um numero: "))
i = 0
while (i < n):
	d = (2*i + 1)*3**i
	i = i + 1
	print(d)
-- OUTPUT:
1
9
45
189
729
2673
9477
32805
111537
373977
1240029
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 09:00:45) 
-- CODE:
from math import *
#Entrada dos dados:
n = int(input("Digite um numero: "))
i = 0
while (i < n):
	n = (-1)**i
	d = (2*i + 1)*3**i
	i = i + 1
	print(n)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 09:00:54) 
-- CODE:
from math import *
#Entrada dos dados:
n = int(input("Digite um numero: "))
i = 0
while (i < n):
	n = (-1)**i
	d = (2*i + 1)*3**i
	i = i + 1
	print(n)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 09:01:24) 
-- CODE:
from math import *
#Entrada dos dados:
n = int(input("Digite um numero: "))
i = 0
while (i < n):
	n = (-1)**i
	d = (2*i + 1)*3**i
	i = i + 1
	print(n)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 09:02:05) 
-- CODE:
from math import *
#Entrada dos dados:
n = int(input("Digite um numero: "))
i = 0
while (i < n):
	n = (-1)**i
	d = (2*i + 1)*3**i
	i = i + 1
	print(n)
	print(d)
-- OUTPUT:
1
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 09:03:01) 
-- CODE:
from math import *
#Entrada dos dados:
n = int(input("Digite um numero: "))
i = 0
while (i < n):
	#n = (-1)**i
	d = (2*i + 1)*3**i
	i = i + 1
	#print(n)
	print(d)
-- OUTPUT:
1
9
45
189
729
2673
9477
32805
111537
373977
1240029
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 09:03:09) 
-- CODE:
from math import *
#Entrada dos dados:
n = int(input("Digite um numero: "))
i = 0
while (i < n):
	#n = (-1)**i
	d = (2*i + 1)*3**i
	i = i + 1
	#print(n)
	print(d)
-- OUTPUT:
1
9
45
189
729
2673
9477
32805
111537
373977
1240029
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 09:03:46) 
-- CODE:
from math import *
#Entrada dos dados:
n = int(input("Digite um numero: "))
i = 0
while (i < n):
	n = (-1)**i
	#d = (2*i + 1)*3**i
	i = i + 1
	print(n)
	#print(d)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 09:04:08) 
-- CODE:
from math import *
#Entrada dos dados:
n = int(input("Digite um numero: "))
i = 0
while (i < n):
	nu = (-1)**i
	#d = (2*i + 1)*3**i
	i = i + 1
	print(n)
	#print(d)
-- OUTPUT:
11
11
11
11
11
11
11
11
11
11
11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 09:04:15) 
-- CODE:
from math import *
#Entrada dos dados:
n = int(input("Digite um numero: "))
i = 0
while (i < n):
	nu = (-1)**i
	#d = (2*i + 1)*3**i
	i = i + 1
	print(nu)
	#print(d)
-- OUTPUT:
1
-1
1
-1
1
-1
1
-1
1
-1
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 09:04:54) 
-- CODE:
from math import *
#Entrada dos dados:
n = int(input("Digite um numero: "))
i = 0
while (i < n):
	nu = (-1)**i
	d = (2*i + 1)*3**i
	i = i + 1
	print(nu)
	print(d)
	print(nu/d)
-- OUTPUT:
1
1
1.0
-1
9
-0.1111111111111111
1
45
0.022222222222222223
-1
189
-0.005291005291005291
1
729
0.0013717421124828531
-1
2673
-0.0003741114852225963
1
9477
0.00010551862403714256
-1
32805
-3.0483158055174515e-05
1
111537
8.965634722110152e-06
-1
373977
-2.673961232910045e-06
1
1240029
8.064327527823946e-07
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 09:08:35) 
-- CODE:
from math import *
#Entrada dos dados:
n = int(input("Digite um numero: "))
i = 0
soma = 0
while (i < n):
	nu = (-1)**i
	d = (2*i + 1)*3**i
	soma = soma + (nu/d)
	i = i + 1
pi = soma*12**0.5
print(round(pi, 8)
-- ERROR:
File "XXXX", line 13
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 09:08:49) 
-- CODE:
from math import *
#Entrada dos dados:
n = int(input("Digite um numero: "))
i = 0
soma = 0
while (i < n):
	nu = (-1)**i
	d = (2*i + 1)*3**i
	soma = soma + (nu/d)
	i = i + 1
pi = soma*12**0.5
print(round(pi, 8))
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 09:09:04) 
-- CODE:
from math import *
#Entrada dos dados:
n = int(input("Digite um numero: "))
i = 0
soma = 0
while (i < n):
	nu = (-1)**i
	d = (2*i + 1)*3**i
	soma = soma + (nu/d)
	i = i + 1
pi = soma*12**0.5
print(round(pi, 8))
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 09:09:14) 
-- CODE:
from math import *
#Entrada dos dados:
n = int(input("Digite um numero: "))
i = 0
soma = 0
while (i < n):
	nu = (-1)**i
	d = (2*i + 1)*3**i
	soma = soma + (nu/d)
	i = i + 1
pi = soma*12**0.5
print(round(pi, 8))
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 09:09:24) 
-- CODE:
from math import *
#Entrada dos dados:
n = int(input("Digite um numero: "))
i = 0
soma = 0
while (i < n):
	nu = (-1)**i
	d = (2*i + 1)*3**i
	soma = soma + (nu/d)
	i = i + 1
pi = soma*12**0.5
print(round(pi, 8))
-- EXECUTION TIME:
0.177407
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:54:44) 
-- CODE:
from math import * #importa as funcoes do math
#Entrada dos dados:
n = int(input("Digite um numero: "))
i = 0 #variavel contadora dos termos
soma = 0 #variavel acumuladora dos termos
while (i < n):
	nu = (-1)**i
	d = (2*i + 1)*3**i
	soma = soma + (nu/d)
	i = i + 1
	print(n)
	print(d)
	print(n/d)
pi = soma*12**0.5
print(round(pi, 8))
-- OUTPUT:
11
1
11.0
11
9
1.2222222222222223
11
45
0.24444444444444444
11
189
0.0582010582010582
11
729
0.015089163237311385
11
2673
0.00411522633744856
11
9477
0.0011607048644085682
11
32805
0.0003353147386069197
11
111537
9.862198194321167e-05
11
373977
2.94135735620105e-05
11
1240029
8.87076028060634e-06
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
